<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B0082"
    android:orientation="vertical"
    tools:context=".Personal_Information">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:text="@string/please_fill_all_fields"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp" />

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Last Name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/age"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/favorite_color"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Hobby"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Favourite Sport"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/colorEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/hobbyEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sportEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:singleLine="true"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageButton
            android:id="@+id/nextPageImageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="152dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next_button" />

    </FrameLayout>


</androidx.appcompat.widget.LinearLayoutCompat>